tests/compile_errors/030-const-objects.buzz
// `age` is constant
object Constant {
	const name: str,
	const age: int,
}

object PartiallyConstant {
	const name: str,
	age: int,
}

test "Constant object" {
	const constant = Constant{
		name = "Joe",
		age = 35,
	};

	constant.age = 38;
}
